syntax = "proto3";

package order;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "jwt/jwt.proto";

option go_package = "github.com/OsipyanG/market/protos/order";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (google.protobuf.Empty);
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
  rpc GetAllDeliveries(GetAllDeliveriesRequest) returns (GetAllDeliveriesResponse);
  rpc GetAllPendingOrders(GetAllPendingOrdersRequest) returns (GetAllPendingOrdersResponse);
}

message Order {
  string order_id = 1;
  string customer_id = 2;
  string status = 3;
  string address = 4;
  repeated OrderItem items = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  uint64 price = 3;
}

message Delivery {
  string order_id = 1;
  string courier_id = 2;
  string status = 3;
}

message CreateOrderRequest {
  jwt.JWTClaims jwt_claims = 1;
  string address = 2;
}

message CreateOrderResponse {
  string order_id = 1;
}

message GetOrderRequest {
  jwt.JWTClaims jwt_claims = 1;
  string order_id = 2;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  jwt.JWTClaims jwt_claims = 1;
  string order_id = 2;
  string status = 3;
  string source = 4;
}

message GetAllOrdersRequest {
  jwt.JWTClaims jwt_claims = 1;
}

message GetAllOrdersResponse {
  repeated Order orders = 1;
}

message GetAllDeliveriesRequest {
  jwt.JWTClaims jwt_claims = 1;
}

message GetAllDeliveriesResponse {
  repeated Delivery deliveries = 1;
}

message GetAllPendingOrdersRequest {
  jwt.JWTClaims jwt_claims = 1;
}

message GetAllPendingOrdersResponse {
  repeated Order orders = 1;
}
